--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@
 
    --transition: all 0.3s linear;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 a {
     text-decoration: none;
 }
@@ -148,6 +150,18 @@ body{
 #nav-check:checked ~ .navbar {
     transform: translateX(0);
 }
+#nav-check:checked ~ .overlay {
+    display: block;
+}
+.overlay{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display:none;
+}
 .navbar{
     position: fixed;
     background-color: rgba(147, 201, 226, 0.9);
@@ -157,7 +171,7 @@ body{
     height: 100%;
     transform: translateX(-100%);
     transition: var(--transition);
-    z-index:3;
+    z-index:3;  
 }
 
 .navbar h3{
@@ -574,11 +588,69 @@ textarea.form-control{
 .form-control:focus + .form-label{
     top: -10px;
     color: var(--clr-secondary);
+    z-index: 5;
 }
 
 .form-control:focus{
     border-color: var(--clr-secondary);
 }
 .form-control:not(:focus):valid +label{
-    
+    top: -10px;
+    z-index: 5;
 }
+
+.submit-btn{
+    padding: 0.7rem 1rem;
+    margin-top: 3.5rem;
+}
+@media screen and (min-width: 992px){
+    .contact-form,
+    .contact-info{
+        width:50%;
+        float:left;
+    }
+}
+/*-----Footer-----*/
+
+.footer{
+    background-color: var(--clr-dark);
+    text-align: center;
+}
+
+.social-icons {
+    color: var(--clr-white);
+}
+
+.social-icons svg{
+    height: 32px;
+    width: 32px;
+    margin-right: 1rem;
+    transition: var(--transition);
+    color: var(--clr-white);
+}
+
+.social-icons svg:hover{
+    color: var(--clr-primary);
+    fill: currentColor;
+}   
+
+.footer-text{
+    color: var(--clr-secondary);
+    margin-top: 1.25rem;
+    text-transform: capitalize;
+    font-weight: 400;
+
+}
+
+body::-webkit-scrollbar{
+    width:10px;
+}
+
+body::-webkit-scrollbar-thumb{
+    background: linear-gradient(to bottom, var(--clr-dark), var(--clr-secondary));
+    border-radius: 5px;
+}
+
+body::-webkit-scrollbar-track{
+    background: var(--clr-pri);
+}   
